# DirectX12Engine

./: .gitignore  CMakeLists.txt  DirectX12 Engine.sln  PreView.ps1  ReadMe.md  rebuild.ps1  run.ps1
DX3D12Engine/Include/Core/: Core.hpp
DX3D12Engine/Include/Game/: Game.hpp
DX3D12Engine/Include/Graphics/: DirectX12Graphics.hpp  InterfaceDirectX12.hpp  d3dx12.hpp
DX3D12Engine/Include/Window/: Window.hpp
DX3D12Engine/Shaders/: Shaders.hlsl
DX3D12Engine/Source/Game/: Game.cpp
DX3D12Engine/Source/Graphics/: DirectX12Graphics.cpp  InterfaceDirectX12.cpp
DX3D12Engine/Source/Window/: Window.cpp
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/Application/: main.cpp
Engine/System/Include/: Application.h  DirectX12Game.h  Headers.h  InterfaceDirectX.h  Window.h
Engine/System/Shaders/: shaders.hlsl
Engine/System/Source/: Application.cpp  DirectX12Game.cpp  InterfaceDirectX.cpp  Window.cpp
Main Application/: main.cpp
